fix: fix overflow hidden for mobile page

--- a/web/src/assets/css/main.styl
+++ b/web/src/assets/css/main.styl
@@ -9,7 +9,6 @@ body,
 .wrapper {
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
 body {
