--- a/web/src/assets/css/mobile/chat-session.styl
+++ b/web/src/assets/css/mobile/chat-session.styl
@@ -1,6 +1,6 @@
 .mobile-chat {
   .message-list-box {
-    padding-top 50px
+    //padding-top 50px
     padding-bottom 10px
     overflow-x auto
     background #F5F5F5;
