--- a/web/src/assets/css/mobile/image-mj.styl
+++ b/web/src/assets/css/mobile/image-mj.styl
@@ -144,7 +144,7 @@
 
               .opt {
                 .opt-btn {
-                  padding 3px 10px
+                  padding 2px 0
                   text-align center
                   border-radius 5px
                   margin 3px 0
@@ -152,6 +152,8 @@
                   cursor pointer
                   background-color #4E5058
                   color #ffffff
+                  font-size 14px
+                  width 100%
                 }
               }
 
